[package]
name = "guessing_game"
version = "0.1.0"
edition = "2018"

[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# 通过release profile来自定义构建
# 在https://crates.io/上发布库
# 通过workspace组织大工程
# 从https://crates.io来安装库
# 使用自定义命令扩展cargo